--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>super strona</title>
+  <title>super strona internetowa</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
